# nn-scope

./: Cargo.toml  README.md
src/: buffer.rs  canvas.rs  data.rs  escape.rs  funxion.rs  main.rs  network.rs  pixl.rs  settings.rs  train.rs  vector.rs  window.rs
