[package]
name = "f"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num = "0.1.42"
libm = "*"
image ="*"
# imageproc = "*"
# webp-animation = "*"
ncurses = "*"
apng = "*"
imageproc = "*"
rusttype = "*"
rand_distr = "*"
minifb = "*"
